--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.5",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
   }
 }
