--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
+    "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0"
   }
