--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "nodemailer": "^6.7.5",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0"
+    "nodemailer": "^6.7.5"
   }
 }
